k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - image: registry.gitlab.com/big/registry-proxy:ID
          name: proxy
          command: ["bash"]
          args: ["-c", "sleep 2
            && curl rpardini:3128/ca.crt -o /etc/pki/ca-trust/source/anchors/ca.crt
            && update-ca-trust
            && ./proxy"]
          ports:
            - containerPort: 5001
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rpardini
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rpardini
    spec:
      containers:
        - image: tiangolo/docker-registry-proxy
          name: rpardini
          ports:
            - containerPort: 3128
