k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  type: NodePort
  selector:
    app: proxy
  ports:
  - port: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: rpardini
  labels:
    app: rpardini
spec:
  ports:
    - port: 3128
  clusterIP: None
  selector:
    app: rpardini
